AtlasOfLivingAustralia/spatial-hub#26 fixes google places z-index

--- a/web-app/css/spatial-hub.css
+++ b/web-app/css/spatial-hub.css
@@ -229,3 +229,10 @@ form input[type=checkbox] {
 /*******************************/
 /* scatterplot end             */
 /*******************************/
+
+/** google places **/
+
+.pac-container {
+    z-index: 1050;
+}
+/** google places end**/
